# CDG

./: .agentignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  __init__.py  __main__.py  cdg.py  demoNotebook.ipynb  demoScript.py  funcs.py  requirements.txt  resume_script.py  setup.cfg  setup.py  trending_script.py
.agents/: BACKLOG.md  PROGRESS.md  PROGRESS_ARCHIVE.md  SPEC.md
.agents/adr/: 0000_TEMPLATE.md
.agents/agents/cavecrew-builder/: cavecrew-builder.md
.agents/agents/cavecrew-investigator/: cavecrew-investigator.md
.agents/agents/cavecrew-reviewer/: cavecrew-reviewer.md
.agents/docs/ADRs/: 0000_TEMPLATE.md  0001-gcp-compatibility.md  0002-native-polars-indicators.md
.agents/etc/: REVIEW_PLAN.md  alpha_readiness_2026-07-05.md  alpha_readiness_plan_2026-07-07.md  base_plan.md  cdg-lib-migration-candidates.md  code_analysis_2026-07-04.md  code_review.md  line_by_line_review.md
.agents/etc/alpha_plan/: 02.fix_analysis_ohlc_nulls.md  04.fix_backtest_neutral_bug.md  05.fix_backtest_metrics.md  06.add_backtest_equity_tests.md  11.cache_coins_list.md  13.improve_check_coin_id.md  15.add_optimization_toggle.md  23.harden_cache_internals.md  25.add_pipeline_currency_assert.md  26.fix_optimization_covariance.md  27.fix_path_injection.md  README.md
.agents/plans/alpha-final/: alpha.md  beta.md  misc.md  review.md
.agents/plans/alpha_plan/: 01.fix_analysis_parser_bugs.md  03.add_indicator_golden_tests.md  07.replace_exit_with_cancellation.md  08.add_pipeline_integration_test.md  12.fix_coingecko_retry.md  (+14 more)
.agents/rules/: communication.md  engineering.md  harness.md  load.md  safety.md  structure.md  workflow.md
.github/workflows/: rust.yml
.sqlx/: query-0254cd077956da43f73f81377becf1f911cdfeb83ae64a42bb9bd021ff8dc3ab.json  query-0c5ff576ee4ab992549babe0c69c99298cea5b7446cdbf6ad36937d7c690b67c.json  query-13a9b8e51f8f556d82f8fab4756167c41a1ae7cbe9a94301353139cb96760420.json  query-93a38e7dfa29a6c498390855a79d1402beb589ee887c269b1cddbf1bad50b8b2.json
cdg/: __init__.py  __main__.py  analyze.py  base.py  cdg.py  get.py  main.py  plot.py  sheets.py
cdg/get/: __init__.py
doc/: README.md  analysis_optimization.md  api_cache.md  architecture.md  custom_strategies.md  deployment.md  installation_usage.md
examples/: nb_simple.ipynb
get/: __init__.py  get.py
src/: analysis.rs  backtest.rs  cache.rs  export.rs  lib.rs  main.rs  optimization.rs  pipeline.rs  plot.rs  ui.rs  utils.rs
src/api/: coingecko.rs  mod.rs  yahoo.rs
tests/: api_tests.rs  pipeline_tests.rs
(+87 files in other folders)
