[package]
name = "cdg"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
polars = { version = "0.36", features = ["lazy", "temporal", "parquet", "csv", "rolling_window"] }
plotters = "0.3"
clap = { version = "4.4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
indicatif = "0.17"
cli-table = "0.4"
dialoguer = "0.11"
rayon = "1.8"
async-trait = "0.1"
tokio-util = "0.7"



[profile.dev]
codegen-units = 1
debug = false

[profile.release]
codegen-units = 1
debug = false


